--- a/ios/RNAsync/Info.plist
+++ b/ios/RNAsync/Info.plist
@@ -56,6 +56,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFUIDisplay-Regular.ttf</string>
+		<string>Nunito-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
