--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-iphone-x-helper": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
