--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.13.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-appearance": "^0.3.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-simple-animations": "^0.2.3"
   },
